<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/selector_screen_background"
	android:orientation="vertical">
	<View
		android:layout_height="0.5dp"
		android:layout_width="match_parent"
		android:background="@color/colorText"
		android:layout_marginEnd="10dp"
		android:layout_marginStart="10dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="9pt"
		android:text="@string/about_app_describtion"
		android:layout_marginTop="10dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		android:textSize="8pt"
		android:text="@string/about_app_description_text"
		android:layout_marginTop="10dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="9pt"
		android:text="@string/about_app_pleases"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:layout_marginStart="5dp"
		android:textSize="9pt"
		android:text="@string/about_app_pleases_text"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="9pt"
		android:text="@string/about_app_creator"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:layout_marginStart="5dp"
		android:textSize="9pt"
		android:text="@string/about_app_creator_text"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="9pt"
		android:text="@string/about_app_links"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:layout_marginStart="5dp"
		android:textSize="9pt"
		android:text="@string/about_app_links_stackoverflow"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:layout_marginStart="5dp"
		android:textSize="8.5pt"
		android:autoLink="web"
		android:text="@string/about_app_links_stackoverflow_text"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:layout_marginStart="5dp"
		android:textSize="9pt"
		android:text="@string/about_app_links_github"
		android:layout_marginTop="5dp"/>
	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:layout_marginStart="5dp"
		android:textSize="8.5pt"
		android:autoLink="web"
		android:text="@string/about_app_links_github_text"
		android:layout_marginTop="5dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>