<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp">
       <!-- <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_register_email_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/img_download">
            </androidx.appcompat.widget.AppCompatImageButton>
        </FrameLayout>-->
        <com.example.famreen.application.custom.AppEditText
            android:id="@+id/et_register_email_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/registration_hidden_name"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/selector_et_border"
            android:layout_marginBottom="50dp" />

        <com.example.famreen.application.custom.AppEditText
            android:id="@+id/et_register_email_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/registration_hidden_email"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selector_et_border" />

        <com.example.famreen.application.custom.AppEditText
            android:id="@+id/et_register_email_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/registration_hidden_password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selector_et_border" />

        <com.example.famreen.application.custom.AppButton
            android:id="@+id/bt_register_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_sign_up"
            android:background="@drawable/selector_button"
            android:elevation="5dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.example.famreen.application.custom.loadingView.LoadingView
        android:id="@+id/loading_register"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:indicatorColor="@color/colorAccent"
        android:layout_gravity="center"
        android:visibility="gone"/>
</merge>